modified test file

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Sections are created with a single hashtag\n",
-    "##Sub-sections are created with two hashtags\n",
-    "this is a change to test 2\n"
+    "# Section \n",
+    "## subsection\n",
+    "`this some code`\n",
+    "- list1\n",
+    "- list2\n",
+    "this is a change\n",
+    "this is a change in branch develop"
    ]
   },
   {
